@@ -23,6 +23,10 @@ static int copyTags[] = {
     RPMTAG_DISTRIBUTION,
     RPMTAG_VENDOR,
     RPMTAG_ICON,
+    RPMTAG_CHANGELOGTIME,
+    RPMTAG_CHANGELOGNAME,
+    RPMTAG_CHANGELOGTEXT,
+    RPMTAG_URL,
     0
 };
 
