@@ -12,7 +12,6 @@
 #include "read.h"
 #include "misc.h"
 
-static int checkSources(Spec spec);
 static void setStandardMacros(Spec spec, char *arch, char *os);
 
 int parseSpec(Spec *specp, char *specFile, char *buildRoot,
@@ -161,49 +160,7 @@ int parseSpec(Spec *specp, char *specFile, char *buildRoot,
     closeSpec(spec);
     *specp = spec;
 
-    if (checkSources(spec)) {
-	freeSpec(spec);
-	return 1;
-    }
-
     return 0;
-}
-
-static int checkSources(Spec spec)
-{
-    struct Source *p;
-    Package pkg;
-    char buf[BUFSIZ];
-    struct stat sb;
-    int res = 0;
-    
-    p = spec->sources;
-    while (p) {
-	sprintf(buf, "%s/%s", rpmGetVar(RPMVAR_SOURCEDIR), p->source);
-	lstat(buf, &sb);
-	if (! S_ISREG(sb.st_mode)) {
-	    rpmError(RPMERR_BADSPEC, "Source file not regular: %s", buf);
-	    res = 1;
-	}
-	p = p->next;
-    }
-
-    pkg = spec->packages;
-    while (pkg) {
-	p = pkg->icon;
-	while (p) {
-	    sprintf(buf, "%s/%s", rpmGetVar(RPMVAR_SOURCEDIR), p->source);
-	    lstat(buf, &sb);
-	    if (! S_ISREG(sb.st_mode)) {
-		rpmError(RPMERR_BADSPEC, "Source file not regular: %s", buf);
-		res = 1;
-	    }
-	    p = p->next;
-	}
-	pkg = pkg->next;
-    }
-
-    return res;
 }
 
 static void setStandardMacros(Spec spec, char *arch, char *os)
